hard-gists/72c7938230537b4f8a4c/run.log
=== Docker Run Log for 72c7938230537b4f8a4c ===
Started at: Mi 29. Okt 17:04:50 CET 2025

[2025-10-29 17:04:51] START: Running container for 72c7938230537b4f8a4c
[2025-10-29 17:04:51] SUCCESS: Container 4f1ef42eeb2cb4f7e8997b54589cd7f526fcff5ea19b171f14eb503bad10b957 started for 72c7938230537b4f8a4c
=== Container logs for 72c7938230537b4f8a4c ===
  File "/snippet.py", line 57
    print "Getting intensity values from mic."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 72c7938230537b4f8a4c ===
[2025-10-29 17:04:53] INFO: Container 4f1ef42eeb2cb4f7e8997b54589cd7f526fcff5ea19b171f14eb503bad10b957 has stopped
